# Kern

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .justfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  format.sh  partitions.csv  release.sh  sdkconfig.defaults  sdkconfig.defaults.crowpanel  sdkconfig.defaults.crowpanel_101  sdkconfig.defaults.wave_43  test.sh
.github/workflows/: github-actions-test.yml  test-all-builds.yml  test-each-commit.yml
components/bbqr/src/: base32.c  bbqr.c  bbqr.h  miniz.c  miniz.h
components/bbqr/test/: Makefile  bbqr_samples.h  test_base32.c  test_bbqr.c  test_miniz.c
components/bsp_common/: Kconfig
components/crowpanel/: crowpanel.c  idf_component.yml
components/crowpanel_101/: crowpanel_101.c  idf_component.yml
components/deflate_codec/: CMakeLists.txt  idf_component.yml
components/deflate_codec/src/: deflate_codec.c  deflate_codec.h
components/deflate_codec/test/: Makefile  test_deflate_codec.c
components/esp_lcd_st7703/: .component_hash  CHECKSUMS.json  esp_lcd_st7703.c  idf_component.yml
components/esp_lcd_st7703/include/: esp_lcd_st7703.h
components/k_quirc/: CMakeLists.txt
components/k_quirc/include/: k_quirc.h
components/k_quirc/src/: k_quirc.c  k_quirc_decode.c  k_quirc_identify.c  k_quirc_internal.h  k_quirc_version.c
components/libwally-core/: CMakeLists.txt  config.h
components/mbedtls_compat/: CMakeLists.txt  sha512_compat.c
components/mbedtls_compat/mbedtls/: aes.h  gcm.h  pkcs5.h  sha256.h  sha512.h
components/sd_card/src/: sd_card.c
components/video/: CMakeLists.txt  video.c  video.h
components/video/cfg/: sc2336_kern.json
components/wave_35/: idf_component.yml  wave_35.c
components/wave_43/: idf_component.yml  wave_43.c
components/wave_4b/: CMakeLists.txt  Kconfig  idf_component.yml  wave_4b.c
components/wave_4b/include/bsp/: esp32_p4_wifi6_touch_lcd_4b.h
components/wave_5/: idf_component.yml  wave_5.c
components/waveshare_bsp/: CMakeLists.txt  idf_component.yml  waveshare_bsp.c
components/waveshare_bsp/priv_include/: bsp_err_check.h
docs/: design-guidelines.md  hardware.md  secure-boot.md  security-plan.md
enclosures/waveshare_4_3/: KernWaveshare4.3.3mf  README.md
flasher/: index.html
kern_secure_boot/: README.md  SHA256SUMS  SHA256SUMS.sig  kern-sb-key0-pub.pem  kern-sb-key1-pub.pem  kern-sb-key2-pub.pem
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/core/: crypto_utils.c  crypto_utils.h  descriptor_checksum.c  descriptor_checksum.h  descriptor_validator.c  descriptor_validator.h  fw_update.c  fw_update.h  kef.c  key.c  key.h  nvs_secure.c  nvs_secure.h  pin.c  pin.h  psbt.c  psbt.h  registry.c  registry.h  settings.c  settings.h  wallet.c  wallet.h
main/core/test/: Makefile  test_derivation_path.c  test_psbt_classify.c  test_registry_parse.c
main/pages/: capture_entropy.c  descriptor_loader.c  descriptor_loader.h  kef_decrypt_page.c  kef_encrypt_page.c  load_descriptor_storage.c  passphrase.c  qr_scanner.c  qr_scanner.h  screensaver.c  screensaver.h  session_lock.c  session_lock.h  store_descriptor.c  store_mnemonic.c
main/pages/dev_tools/: decode_snapshots.c  decode_snapshots.h  dev_menu.c  snapshot.c
main/pages/home/: addresses.c  bip85.c  home.c  public_key.c
main/pages/home_pages/: addresses.c  home.c  public_key.c  sign.c  wallet_settings.c  wallet_settings.h
main/pages/load_mnemonic/: load_menu.c  load_storage.c  manual_input.c  word_numbers_input.c
main/pages/login/: about.c  login.c  login_scan.c  login_settings.c  security_settings.c  security_settings.h
main/pages/login_pages/: key_confirmation.c  login.c  mnemonic_editor.c  mnemonic_editor.h
main/pages/new_mnemonic/: dice_rolls.c  entropy_from_camera.c  new_mnemonic_menu.c
main/psbt/: psbt.c  psbt.h
main/qr/: encoder.c  encoder.h  parser.c  scanner.c  scanner.h  viewer.c
main/ui/: battery.c  battery.h  dialog.c  dialog.h  dropdown_page.c  dropdown_page.h  input_helpers.c  input_helpers.h  kern_card_style.c  kern_card_style.h  kern_theme.h  key_info.c  keyboard.c  menu.c  menu.h  numeric_keypad.c  numeric_keypad.h  path_keypad.c  path_keypad.h  sankey.c  settings_row.c  swipe_back.c  theme.c  theme.h  theme_widgets.c  theme_widgets.h  wallet_source_picker.c
main/ui_components/: info_dialog.c  info_dialog.h  qr_viewer.c  sankey_diagram.c  sankey_diagram.h  theme.c  theme.h  ui_input_helpers.c  ui_input_helpers.h
main/utils/: bip39_filter.c  bip39_filter.h  mnemonic_qr.c  mnemonic_qr.h  qr_codes.c  qr_codes.h  secure_mem.h  session.c  session.h
scripts/: ci-checks.sh  format.sh  release.sh  sign_release.sh  test.sh
simulator/: CMakeLists.txt  README.md  lv_conf.h
simulator/data/: README.md
simulator/platform/: README.md  sdkconfig.h
simulator/platform/bsp_sim/: bsp_sim.c
simulator/platform/bsp_sim/include/: esp_lvgl_port.h
simulator/platform/bsp_sim/include/bsp/: config.h  display.h  esp-bsp.h  esp32_p4_wifi6_touch_lcd_4b.h
simulator/platform/esp_idf_stubs/: efuse_hmac_sim.c  freertos_sim.c  fw_update_sim.c  nvs_sim.c  storage_stub.c  stubs.c
simulator/platform/esp_idf_stubs/include/: esp_app_desc.h  esp_check.h  esp_efuse.h  esp_err.h  esp_heap_caps.h  esp_hmac.h  esp_log.h  esp_partition.h  esp_random.h  esp_spiffs.h  esp_system.h  esp_task_wdt.h  esp_timer.h  mbedtls_compat.h  nvs.h  nvs_flash.h  sim_nvs.h
simulator/platform/esp_idf_stubs/include/driver/: gpio.h  i2c_master.h  ledc.h  ppa.h
simulator/platform/esp_idf_stubs/include/freertos/: FreeRTOS.h  event_groups.h  idf_additions.h  queue.h  semphr.h  task.h
simulator/platform/esp_idf_stubs/include/linux/: videodev2.h
simulator/platform/sd_card_sim/: sd_card_sim.c
simulator/platform/sd_card_sim/include/: sd_card.h  sim_sdcard.h
simulator/platform/video_sim/: stb_image.h  stb_image_impl.c  v4l2_capture.c  v4l2_capture_macos.mm  video_sim.c
simulator/platform/video_sim/include/: esp_video_device.h  esp_video_init.h  sim_video.h  v4l2_capture.h
simulator/src/: main_sim.c
simulator/tests/: storage_smoke.c
tools/: bake_icons.py
(+58 files in other folders)
